Wrap CSS in `internal` class to prevent styles leaking

--- a/app/webpacker/styles/internal.scss
+++ b/app/webpacker/styles/internal.scss
@@ -3,7 +3,7 @@ $govuk-include-default-font-face: false;
 @import "~govuk-frontend/govuk/all";
 @import "~trix";
 
-.internal-container {
+.internal {
   .event-description {
     resize: vertical;
     overflow: auto;
@@ -43,7 +43,7 @@ $govuk-include-default-font-face: false;
   $grey-very-light: #f3f2f1;
   $br: 7.5px;
 
-  .listing {
+  &.index {
     background-color: $grey-very-light;
     max-width: none;
 
